WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169626
Let PDFLayerController drive cursor updates so that it's correct more often
https://bugs.webkit.org/show_bug.cgi?id=169626
Summary
Let PDFLayerController drive cursor updates so that it's correct more often
Tim Horton
Reported
2017-03-14 13:31:59 PDT
Let PDFLayerController drive cursor updates so that it's correct more often
Attachments
Patch
(6.84 KB, patch)
2017-03-14 13:32 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(6.62 KB, patch)
2017-03-14 14:26 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2017-03-14 13:32:18 PDT
Created
attachment 304415
[details]
Patch
Tim Horton
Comment 2
2017-03-14 13:32:41 PDT
rdar://problem/30762943
WebKit Commit Bot
Comment 3
2017-03-14 13:34:47 PDT
Attachment 304415
[details]
did not pass style-queue: ERROR: Source/WebKit2/WebProcess/Plugins/PDF/DeprecatedPDFLayerControllerSPI.h:37: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 4
2017-03-14 14:26:18 PDT
Created
attachment 304419
[details]
Patch
WebKit Commit Bot
Comment 5
2017-03-14 16:18:58 PDT
Comment on
attachment 304419
[details]
Patch Clearing flags on attachment: 304419 Committed
r213954
: <
http://trac.webkit.org/changeset/213954
>
WebKit Commit Bot
Comment 6
2017-03-14 16:19:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug