Let PDFLayerController drive cursor updates so that it's correct more often https://bugs.webkit.org/show_bug.cgi?id=169626 <rdar://problem/30762943>

Reviewed by Simon Fraser.

* WebProcess/Plugins/PDF/DeprecatedPDFLayerControllerSPI.h:
* WebProcess/Plugins/PDF/DeprecatedPDFPlugin.h:
* WebProcess/Plugins/PDF/DeprecatedPDFPlugin.mm:
(-[WKPDFLayerControllerDelegate setMouseCursor:]):
(WebKit::PDFPlugin::handleMouseEvent):
(WebKit::PDFPlugin::handleMouseEnterEvent):
(WebKit::pdfLayerControllerCursorTypeToCursor):
(WebKit::PDFPlugin::notifyCursorChanged):
Disable updateCursor and use the setMouseCursor delegate method when possible.


Canonical link: https://commits.webkit.org/186637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213954 268f45cc-cd09-0410-ab3c-d52691b4dbfc